Better support for tags. Tags with spaces should be replaced with underscores in the markdown file as well as their tags page. Upon rendering, the underscores are replaced with spaces. This also means no tags should have actual underscores in them.

--- a/_posts/2015-07-13-Kandel-Ch33.md
+++ b/_posts/2015-07-13-Kandel-Ch33.md
@@ -4,9 +4,9 @@ title: "KS Ch33: The organization and planning of movement"
 date: 2015-7-13
 comments: false
 tags:
-- neuroscience-reading
-- Kandel et al. Principles of Neuroscience
-- motor system
+- neuroscience_reading
+- Kandel_et_al._Principles_of_Neuroscience
+- motor_system
 ---
 Movement error/variability is proportional with velocity and force.
 
