--- a/_posts/2015-07-13-Kandel-Ch33.md
+++ b/_posts/2015-07-13-Kandel-Ch33.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "KS Ch33: The organization and planning of movement"
+title: "KS Ch. 33: The organization and planning of movement"
 date: 2015-7-13
 comments: false
 tags:
