--- a/_posts/2015-07-26-DiGiovanna2009.md
+++ b/_posts/2015-07-26-DiGiovanna2009.md
@@ -6,7 +6,7 @@ comments: false
 tags:
 - Machine_Learning
 - Deep_Learning
-- Reinforcment_Learning
+- Reinforcement_Learning
 - BMI
 - Sanchez
 ---
