--- a/_posts/2015-07-26-Sanchez2011.md
+++ b/_posts/2015-07-26-Sanchez2011.md
@@ -11,7 +11,7 @@ tags:
 - Sanchez
 ---
 
-[Control of a Center-Out Reaching Task Using a Reinforcement Learning Brain-Machine Interface](http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5910601&tag=1)
+[Control of a Center-Out Reaching Task Using a Reinforcement Learning Brain-Machine Interface](http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5910601)
 
 I am a bit puzzled why this paper is published in 2011, after the [DiGiovanna 2009](http://www.bme.miami.edu/nrg/publications/journal/journal%2017.pdf), when the experiment less complicated, but with the same premise. I speculate it might be this paper demonstrates RLBMI experiments in rhesus monkeys, instead of rats.
 
@@ -21,12 +21,13 @@ From the abstract: *Neural recordings obtained from the primary motor cortex wer
 
 **Decoder**: Reinforcement learning with a multilayer perceptron neural network (MLP). Adaptation is focused on maximizing rewards through successful completion of the trials by the agent. The agent/BMI controller modeled its cursor control probelm as a Markov Decision Process (MDP), characterized by neural modulation as state *s* (neural data corresponding to all the units) and discrete movements performed by the RL agent as actions *a* - (in the experiment simply as one of the 8 directions in which the targets can be). Each action in a state will change the state of the environment with a certain probability - the transition probability. The agent expects a reward *r* when taking an action given a state. Q-learning is used to approximate this reward function, and the MLP is used to map state-action pairs to their expected reward values.
 
-
-\begin{aligned} 
-P^{a}\_{ss^{\prime}} & = Pr \lbrace s\_{t+1}=ss^{\prime}|s\_t=s,a_t=a\rbrace \\\\
-R^{a}\_{ss^{\prime}} & = E\lbrace r\_{t+1}|s\_t=s,a\_t=a,s\_{t+1}=s^{\prime}\rbrace\\\\
+$$
+\begin{align} 
+P^{a}\_{ss^{\prime}} & = Pr \lbrace s\_{t+1}=ss^{\prime}|s\_t=s,a_t=a\rbrace \\
+R^{a}\_{ss^{\prime}} & = E\lbrace r\_{t+1}|s\_t=s,a\_t=a,s\_{t+1}=s^{\prime}\rbrace\\
 Q(s\_t,a\_t) & \gets Q(s\_t,a\_t)+\alpha(r\_{t+1}+\gamma\max\_{a}(Q(s\_{t+1},a)-Q(s\_t,a\_t)))
-\end{aligned}
+\end{align}
+$$
 
 **Results**: Performance evolves and improves over time from the ranodmized initialization state. Accuracy around 97%. But this task is easily done with a simple logistic regression classifier. They make the distinction that the decoder here does not require an **a priori training signal**, as the feedback is whether the action was correct. While this demonstration is not so impressive, under more complex experiments, RL can potentially be much more useful than supervised learning method.
 
