--- a/_posts/2015-07-27-Francis2015.md
+++ b/_posts/2015-07-27-Francis2015.md
@@ -14,7 +14,7 @@ tags:
 - neural_decoding
 ---
 
-[Toward an Autonomous Brain Machine Interface: Integrating Sensorimotor Reward Modulation and Reinforcement Learning](http://iopscience.iop.org/1741-2552/10/6/066005/)
+[Toward an Autonomous Brain Machine Interface: Integrating Sensorimotor Reward Modulation and Reinforcement Learning](http://www.jneurosci.org/content/35/19/7374.abstract.html)
 
 This paper seeks to demonstrate that single units/multiunits and local field potentials in M1 are modulated by reward expectaiton during reaching movements and that this modulation is present even while subjects passively viewed cursor motions that are predictive of either reward or nonreward. They also tried to classify whether a trial is rewarding vs. nonrewarding based on the neural data, on a moment-to-moment basis.
 
