--- a/_posts/2015-07-27-Sanchez2014.md
+++ b/_posts/2015-07-27-Sanchez2014.md
@@ -11,13 +11,13 @@ tags:
 - Sanchez
 ---
 
-[Using Reinforcement Learning to Provide Stable Brain-Machine Interface Control Despite Neural Input Reorganization](Using Reinforcement Learning to Provide Stable Brain-Machine Interface Control Despite Neural Input Reorganization)
+[Using Reinforcement Learning to Provide Stable Brain-Machine Interface Control Despite Neural Input Reorganization](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0087253)
 
 Simple binary BMI-control demonstration with the RLBMI framework. Finally showed some neural data, and showed that the RLBMI approach is robust against neuron loss. They are calling their RL neural decoder in [Sanchez 2013]({{ site.baseurl}}/2015/07/Sanchez2013) "Associative reinforcement learning that combined elements of supervised learning with reinforcment based optimization".
 
 Since the experiment control is so simplistic, cannot derive much value about this decoder's performance compared to other closed-loop based methods. But
     
-    The RLBMI maintained high performance when applied in a contiguous fashion across experiment sessions spanning up to 17 days. The decoder weights started from random initial conditiosn during the first session, and during subsequent sessions the system was intialized from wegiths learning in the previous session, and was then allowed to adapt as usual without any new initializations or interventions. [...] Half of the neural input signals were lost between day 9 and 16. However, the system was able to quickly adapt and this loss resulted in only a slight dip in performance.
+>The RLBMI maintained high performance when applied in a contiguous fashion across experiment sessions spanning up to 17 days. The decoder weights started from random initial conditiosn during the first session, and during subsequent sessions the system was intialized from wegiths learning in the previous session, and was then allowed to adapt as usual without any new initializations or interventions. [...] Half of the neural input signals were lost between day 9 and 16. However, the system was able to quickly adapt and this loss resulted in only a slight dip in performance.
 
 **References to Read**
 
