--- a/_posts/2018-01-31-GLM2.md
+++ b/_posts/2018-01-31-GLM2.md
@@ -62,11 +62,11 @@ PCA is pretty magical. Bishop's [Pattern Recognition and Machine Learning](https
 
 2. A complementary formulation to the previous one is projecting data to subspace to **mimimize** the projection error. This is basically linear regression by OLS. There is even a [stackexchange question](https://stats.stackexchange.com/questions/192797/when-to-use-pca-vs-ols) on it.
 
-3. Probabilistic PCA. In this approach, PCA is described as the *maximum likelihood solution of a probabilistic latent variable model*. In this generative view, the data is described as samples drawn according to $p(\mathbf{x}|\mathbf{z})=\mathscr{N}(\mathbf{x}|\mathbf{W}\mathbf{z}+\mathbf{\mu}, \sigma^2\mathbf{I})$. This is a pretty mind blowing formulation which would link PCA, traditionally a dimensionality reduction technique, with factor analysis that describe latent variables. There is a big discussion on [stackexchange](https://stats.stackexchange.com/a/123136/138234) on this generative view of PCA.
+3. Probabilistic PCA. In this approach, PCA is described as the *maximum likelihood solution of a probabilistic latent variable model*. In this generative view, the data is described as samples drawn according to $$p(\mathbb{x}|\mathbb{z})=\mathscr{N}(\mathbb{x}|\mathbb{W}\mathbb{z}+\mathbb{\mu}, \sigma^2\mathbb{I})$$. This is a pretty mind blowing formulation which would link PCA, traditionally a dimensionality reduction technique, with factor analysis that describe latent variables. There is a big discussion on [stackexchange](https://stats.stackexchange.com/a/123136/138234) on this generative view of PCA.
 
 4. Bayesian PCA. Bishop is a huge Bayesian lover, so of course he talks about making PCA Bayesian. A cool advantages is automatic selection of principal components by giving the vectors of $$W$$ a prior which is then shrunk during the EM procedures. Another cool thing about PPCA/Bayesian PCA is the iterative procedure allows estimating the top principal components without computing the entire covariance matrix/eigenvalue decomposition.
 
-5. Factor Analysis. This is treated as a generalization of PPCA, where instead of $\sigma^2\mathbf{I}$, we have $p(\mathbf{x}|\mathbf{z})=\mathscr{N}(\mathbf{x}|\mathbf{W}\mathbf{z}+\mathbf{\mu}, \mathbf{Psi})$, where $\mathbf{Psi}$ is still a diagonal matrix, but the individual variance values are not the same. This has the following consequences of using PCA vs. FA, quoting [amoeba](https://stats.stackexchange.com/a/123136/138234), 
+5. Factor Analysis. This is treated as a generalization of PPCA, where instead of $$\sigma^2\mathbb{I}$$, we have $$p(\mathbb{x}|\mathbb{z})=\mathscr{N}(\mathbb{x}|\mathbb{W}\mathbb{z}+\mathbb{\mu}, \mathbb{Psi})$$, where $$\mathbb{Psi}$$ is still a diagonal matrix, but the individual variance values are not the same. This has the following consequences of using PCA vs. FA, quoting [amoeba](https://stats.stackexchange.com/a/123136/138234), 
 
     > As the dimensionality n increase, the diagonal [of sampling covariance matrix] becomes in a way less and less important because there are only n elements on the diagonal and O(n^2) elements off the diagonal. As a result, for the large n there is usually not much of a difference between PCA and FA at all [...] For small n they can indeed differ a lot.
 
