--- a/_posts/2018-05-05-DSPnotes.md
+++ b/_posts/2018-05-05-DSPnotes.md
@@ -10,13 +10,13 @@ tags:
 
 There are some important signal processing points I keep having to re-derive, is rarely mentioned in the textbooks, and buried deep in the math.
 
-## What is the physical significance of negative frequencies?
+**What is the physical significance of negative frequencies?**
 
 FFT of real signals usually have both positive and negative frequencies in their spectrum. In feedback analysis, we simply ignore the negative frequencies and look at the positive part. 
 
 A good illustration of what is actually happening is below:
 
-![spiral]({{ site.baseurl }}/assets/fft_spirla.gif){: .center-image }
+![spiral]({{ site.baseurl }}/assets/fft_spiral.gif){: .center-image }
 
 See also [this stackexchange](https://dsp.stackexchange.com/a/449/35558)
 
@@ -24,7 +24,7 @@ The spiral can spin counter-clockwise or clock-wise, corresponding to positive o
 
 In contrast, in Hilbert transform, the analytic signal $$x_c(t)=x_r(t)+jHT\{x_r(t)\}$$ has single-sided spectrum, which is not physically realizable. However, it allows us to derive the instantaneous amplitude and frequency of the actual time-domain signal $$x_r(t)$$.
 
-## Why is a linear phase response desirable for a system?
+**Why is a linear phase response desirable for a system?**
 
 I always get tripped up by the language. I used to see a phase-response that is not flat and think the different frequencies have different phase lag, therefore they are going to combine at the output and the signal is going to be distorted.
 
