--- a/_posts/2023-02-26-PCA_vs_FA.md
+++ b/_posts/2023-02-26-PCA_vs_FA.md
@@ -26,7 +26,7 @@ FA:& \mathbf{C} \approx \mathbf{W}\mathbf{W}^T + \mathbf{Psi}\\
 
 Here $$\mathbf{W}$$ is a matrix with $$k$$ columns ($$k < n$$), representing the low number of principal components or latent factors, $$\mathbf{I}$$ is identify matrix, and $$\mathbf{Psi}$$ is a diagnal matrix. Each method can be formulated as finding $$\mathbf{WW}$$ (in FA's case, als $$\mathbf{Psi}$$) to minimize the norm of the difference between left-hand and right-hand sides.
 
-Note that PPCA can be thought of as an intermediate between PCA and FA, where the noise term $$\sigma&2\mathbf{I}$$ makes it a generative model like FA, it practically acts like PCA (in that $$\mathbf{W}$$ spans the same subspace in both).
+Note that PPCA can be thought of as an intermediate between PCA and FA, where the noise term $$\sigma^2\mathbf{I}$$ makes it a generative model like FA, it practically acts like PCA (in that $$\mathbf{W}$$ spans the same subspace in both).
 
 ### Difference in model assumptions
 
