--- a/_posts/2023-02-26-PCA_vs_FA.md
+++ b/_posts/2023-02-26-PCA_vs_FA.md
@@ -21,10 +21,10 @@ $$
 \begin{align}
 PCA:& \mathbf{C} \approx \mathbf{W}\mathbf{W}^T\\
 PPCA:& \mathbf{C} \approx \mathbf{W}\mathbf{W}^T + \sigma^2\mathbf{I}\\
-FA:& \mathbf{C} \approx \mathbf{W}\mathbf{W}^T + \mathbf{Psi}\\
+FA:& \mathbf{C} \approx \mathbf{W}\mathbf{W}^T + \mathbf{\Psi}\\
 \end{align}$$
 
-Here $$\mathbf{W}$$ is a matrix with $$k$$ columns ($$k < n$$), representing the low number of principal components or latent factors, $$\mathbf{I}$$ is identify matrix, and $$\mathbf{Psi}$$ is a diagnal matrix. Each method can be formulated as finding $$\mathbf{WW}$$ (in FA's case, als $$\mathbf{Psi}$$) to minimize the norm of the difference between left-hand and right-hand sides.
+Here $$\mathbf{W}$$ is a matrix with $$k$$ columns ($$k < n$$), representing the low number of principal components or latent factors, $$\mathbf{I}$$ is identify matrix, and $$\mathbf{\Psi}$$ is a diagnal matrix. Each method can be formulated as finding $$\mathbf{WW}$$ (in FA's case, als $$\mathbf{\Psi}$$) to minimize the norm of the difference between left-hand and right-hand sides.
 
 Note that PPCA can be thought of as an intermediate between PCA and FA, where the noise term $$\sigma^2\mathbf{I}$$ makes it a generative model like FA, it practically acts like PCA (in that $$\mathbf{W}$$ spans the same subspace in both).
 
@@ -63,9 +63,11 @@ From model formulations, PCA finds $$\mathbf{W}$$ to best approximate the sample
 
 This means:
 1. If the diagonals of $$\mathbf{C}$$ are small (i.e. all features have low noise), meaning that the off-diagonal elements dominate $$\mathbf{C}$$, then FA approaches PCA.
-2. If $$n$$ is very big, then the size of $$\mathbf{C}$$ is also very big, and therefore the contribution of the diagonal elements is small compared to that of the off-diagonal elements, then once again PCA results approach FA. A good way to think about this is in terms of the residual reconstruction error picture -- when $$n\xrightarrow\infty$$, the residual error from PC-reconstruction becomes more isotropic, approaching that of FA.
+2. If $$n$$ is very big, then the size of $$\mathbf{C}$$ is also very big, and therefore the contribution of the diagonal elements is small compared to that of the off-diagonal elements, then once again PCA results approach FA. A good way to think about this is in terms of the residual reconstruction error picture -- when $$n\rightarrow\infty$$, the residual error from PC-reconstruction becomes more isotropic, approaching that of FA.
 
-When is $$n$$ large enough for PCA to approximate FA? When the ratio $$n/k$$, where $$k$$ is the expected number of latent factors, is big. __Usually a ratio of 10__ is a good threshold from simulation results. This also explains my past observations in neural data -- where the number of features is ~100 (number of neurons), and latent factors is ~10 (cursor/actuator position/velocity).
+When is $$n$$ large enough for PCA to approximate FA?
+
+When the ratio $$n/k$$, where $$k$$ is the expected number of latent factors, is big. __Usually a ratio of 10__ is a good threshold from simulation results. This also explains my past observations in neural data -- where the number of features is ~100 (number of neurons), and latent factors is ~10 (cursor/actuator position/velocity).
 
 The other, more practical reason is simply that PCA is way more easier to compute!
 
